common/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/hook-delete-policy: "HookFailed"
  labels:
    istio-injection: enabled
