common/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: istio-system
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
  - ports:
    - port: 53
      protocol: UDP
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
